--- a/d/index.html
+++ b/d/index.html
@@ -319,6 +319,16 @@
             window.location.href = randomLink;
         });
     </script>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9N6WSYZL97"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-9N6WSYZL97');
+    </script>
 </body>
 
 </html>
