--- a/d/index.html
+++ b/d/index.html
@@ -14,6 +14,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:wght@400;600&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="./streamstyle.css">
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -39,214 +41,6 @@
 
         gtag('config', 'G-9N6WSYZL97');
     </script>
-
-    <style>
-        :root {
-            --plyr-color-main: rgb(236, 14, 14);
-        }
-
-        .video-actions {
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            /* display: none; */
-        }
-
-        .video-actions-inner {
-            width: 100%;
-            max-width: 720px;
-            display: flex;
-            gap: 8px;
-            padding: 12px 12px 6px 12px;
-            overflow-x: auto;
-            scrollbar-width: none;
-            -ms-overflow-style: none;
-            white-space: nowrap;
-        }
-
-        .video-actions-inner::-webkit-scrollbar {
-            display: none;
-        }
-
-        .action-btn {
-            background: #f2f2f2;
-            border: none;
-            padding: 8px 16px;
-            border-radius: 16px;
-            font-family: inherit;
-            font-size: 14px;
-            font-weight: 500;
-            cursor: pointer;
-            transition: background-color 0.2s;
-            flex-shrink: 0;
-        }
-
-        .action-btn,
-        .action-btn a {
-            color: #000;
-        }
-
-        .action-btn:hover {
-            background: #e5e5e5;
-        }
-
-        /* anchor */
-        .stickAd {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            width: 100%;
-            min-height: 70px;
-            max-height: 200px;
-            padding: 5px 5px;
-            box-shadow: 0 -6px 18px 0 rgba(9, 32, 76, .1);
-            transition: all .1s ease-in;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background-color: #fefefe;
-            z-index: 50;
-            border-top: 1px solid #eceff1
-        }
-
-        .stickAdclose {
-            width: 40px;
-            height: 30px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border-radius: 12px 0 0;
-            border: 1px solid #eceff1;
-            border-bottom: 0;
-            border-right: 0;
-            position: absolute;
-            right: 0;
-            top: -30px;
-            background-color: inherit
-        }
-
-        .stickAdclose svg {
-            width: 18px;
-            height: 18px;
-            fill: none !important;
-            stroke: #48525c;
-            stroke-linecap: round;
-            stroke-linejoin: round;
-            stroke-width: 1
-        }
-
-        .stickAdcontent {
-            flex-grow: 1;
-            overflow: hidden;
-            display: block;
-            position: relative
-        }
-
-        .stickAdin:checked~.stickAd {
-            padding: 0;
-            min-height: 0
-        }
-
-        .stickAdin:checked~.stickAd .stickAdcontent {
-            display: none
-        }
-
-        .stickAdin:checked~.stickAd .stickAdclose svg {
-            -webkit-transform: rotate(180deg);
-            transform: rotate(180deg)
-        }
-
-        .video {
-            position: relative;
-            /* Agar overlay mengikuti ukuran video */
-            display: flex;
-            justify-content: center
-        }
-
-        .video-ads {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, .7);
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            color: white;
-            text-align: center;
-            backdrop-filter: blur(10px);
-            z-index: 10
-        }
-
-        .adsTxt {
-            font-size: 18px;
-            font-family: Arial, sans-serif
-        }
-
-        .adsHeader {
-            margin-bottom: 10px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .adsIcon {
-            margin: 7px
-        }
-
-        .adsIcon img {
-            width: 40px;
-            height: 40px
-        }
-
-        .adsButton {
-            background-color: #3b82f6;
-            border: none;
-            color: white;
-            padding: 12px 24px;
-            font-size: 16px;
-            border-radius: 20px;
-            cursor: pointer;
-            margin-top: 10px
-        }
-
-        .adsButton:disabled {
-            background-color: #6b7280;
-            cursor: not-allowed
-        }
-
-        .hidden {
-            display: none
-        }
-
-        .earn-btn {
-            display: inline-flex;
-            align-items: center;
-            gap: 4px;
-            background-color: #fff35c;
-            color: #000;
-            font-weight: 600;
-            font-size: small;
-            padding: 5px;
-            border-radius: 9999px;
-            text-decoration: none;
-            font-family: sans-serif;
-            transition: background-color 0.2s;
-        }
-
-        .earn-btn img {
-            width: 28px;
-            height: 28px;
-        }
-
-        .earn-btn:hover {
-            background-color: #ffe733;
-            /* sedikit lebih gelap saat hover */
-        }
-    </style>
 </head>
 
 <body>
@@ -284,51 +78,71 @@
             </div>
         </div>
         <div class="as">
-
-        </div>
-        <div class="footer">
-            <div class="copyright"> Copyright &copy; <span id="year"></span> TRUE DOMAIN PRIVACY, LLC </div>
-            <div class="legal">
-                <div class="item">
-                    <a href="/terms-of-service">Terms of Service</a>
+            <div class="joingrup">
+                <div class="join-icon">
+                    <svg width="24px" height="24px" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="16" cy="16" r="14" fill="url(#paint0_linear_87_7225)" />
+                        <path
+                            d="M22.9866 10.2088C23.1112 9.40332 22.3454 8.76755 21.6292 9.082L7.36482 15.3448C6.85123 15.5703 6.8888 16.3483 7.42147 16.5179L10.3631 17.4547C10.9246 17.6335 11.5325 17.541 12.0228 17.2023L18.655 12.6203C18.855 12.4821 19.073 12.7665 18.9021 12.9426L14.1281 17.8646C13.665 18.3421 13.7569 19.1512 14.314 19.5005L19.659 22.8523C20.2585 23.2282 21.0297 22.8506 21.1418 22.1261L22.9866 10.2088Z"
+                            fill="white" />
+                        <defs>
+                            <linearGradient id="paint0_linear_87_7225" x1="16" y1="2" x2="16" y2="30"
+                                gradientUnits="userSpaceOnUse">
+                                <stop stop-color="#37BBFE" />
+                                <stop offset="1" stop-color="#007DBB" />
+                            </linearGradient>
+                        </defs>
+                    </svg>
                 </div>
-                <div class="item">
-                    <a href="#" id="reportAbuse">Report Abuse</a>
+                <div class="join-detail">
+                    <div class="join-text">Gabung Channel Telegram</div>
+                    <p class="join-text">Dapatkan lebihbanyak link</p>
+                </div>
+                <a class="join-btn" href="https://t.me/+NGuCFyGDraVmNjk9" target="_blank" class="join-btn">Join Now</a>
+            </div>
+            <div class="footer">
+                <div class="copyright"> Copyright &copy; <span id="year"></span> TRUE DOMAIN PRIVACY, LLC </div>
+                <div class="legal">
+                    <div class="item">
+                        <a href="/terms-of-service">Terms of Service</a>
+                    </div>
+                    <div class="item">
+                        <a href="#" id="reportAbuse">Report Abuse</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Google tag (gtag.js) -->
+        <!-- Google tag (gtag.js) -->
 
-    <script>
-        document.getElementById('year').textContent = new Date().getFullYear();
-    </script>
+        <script>
+            document.getElementById('year').textContent = new Date().getFullYear();
+        </script>
 
-    <script type="module" src="watch.js"></script>
+        <script type="module" src="watch.js"></script>
 
-    <script>
-        // Daftar link tujuan
-        const redirectLinks = [
-            "https://domesticrejoinedremark.com/rr7w4y66s?key=f5a3297e273e8f2b63d61b0d19b8d0a9",
-            "https://domesticrejoinedremark.com/xsv7f4118a?key=a12a22c36e35a402ee435cfb6c6db695",
-            "https://otieu.com/4/8420178"
-        ];
+        <script>
+            // Daftar link tujuan
+            const redirectLinks = [
+                "https://domesticrejoinedremark.com/rr7w4y66s?key=f5a3297e273e8f2b63d61b0d19b8d0a9",
+                "https://domesticrejoinedremark.com/xsv7f4118a?key=a12a22c36e35a402ee435cfb6c6db695",
+                "https://otieu.com/4/8420178"
+            ];
 
-        // Fungsi ambil link acak
-        function getRandomLink() {
-            const randomIndex = Math.floor(Math.random() * redirectLinks.length);
-            return redirectLinks[randomIndex];
-        }
+            // Fungsi ambil link acak
+            function getRandomLink() {
+                const randomIndex = Math.floor(Math.random() * redirectLinks.length);
+                return redirectLinks[randomIndex];
+            }
 
-        // Tambahkan state awal ke history
-        history.pushState(null, null, location.href);
+            // Tambahkan state awal ke history
+            history.pushState(null, null, location.href);
 
-        // Dengarkan event saat tombol back ditekan
-        window.addEventListener('popstate', function (event) {
-            const randomLink = getRandomLink();
-            window.location.href = randomLink;
-        });
-    </script>
+            // Dengarkan event saat tombol back ditekan
+            window.addEventListener('popstate', function (event) {
+                const randomLink = getRandomLink();
+                window.location.href = randomLink;
+            });
+        </script>
 
 </body>
 
