add adsscript js in index.html

--- a/d/index.html
+++ b/d/index.html
@@ -119,6 +119,7 @@
         </script>
 
         <script type="module" src="watch.js"></script>
+        <script src="adsscript.js"></script>
 
         <script>
             // Daftar link tujuan
