menghapus iklan & related post

--- a/d/index.html
+++ b/d/index.html
@@ -23,7 +23,7 @@
 
     <!-- ads2 -->
     <meta name="monetag" content="c6237fad141fec25af37bcb8e2de0e81">
-    <script type='text/javascript' src='//cunningrespectable.com/78/eb/56/78eb564356465edb57c47d3471c27669.js'></script>
+    <!-- <script type='text/javascript' src='//cunningrespectable.com/78/eb/56/78eb564356465edb57c47d3471c27669.js'></script> -->
     <script type="module" src="adsscript.js"></script>
 
     <!-- Google tag (gtag.js) -->
@@ -94,7 +94,7 @@
                 <button class="action-btn" id="reportBtn">Report</button>
             </div>
         </div>
-        <div class="related-videos">
+        <!-- <div class="related-videos">
             <h3><i class="bi bi-collection-play mr-2"></i>Related Videos</h3>
             <div class="video-grid">
                 <div class="video-card">
@@ -110,7 +110,7 @@
                     </a>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="footer">
             <div class="copyright"> Copyright &copy; <span id="year"></span> TRUE DOMAIN PRIVACY, LLC </div>
             <div class="legal">
