menambahkan teks konten dihapus

--- a/s/index.html
+++ b/s/index.html
@@ -91,7 +91,7 @@
         </div>
     </footer>
 
-    <script type="module" src="../assets/s.js"></script>
+    <script type="module" src="../assets/s.js1"></script>
     </script>
     <script>
         // Daftar link tujuan
