--- a/d/index.html
+++ b/d/index.html
@@ -138,7 +138,7 @@
                 var params = new URLSearchParams(location.search);
                 if (params.get('id') === 'kBLgL3zP1') {
                     // ganti dengan URL halaman pesan kamu
-                    location.replace('/removed.html');
+                    location.replace('./removed.html');
                 }
             })();
         </script>
