--- a/d/index.html
+++ b/d/index.html
@@ -23,7 +23,7 @@
 
     <!-- ads2 -->
     <meta name="monetag" content="c6237fad141fec25af37bcb8e2de0e81">
-    <!-- <script type='text/javascript' src='//cunningrespectable.com/78/eb/56/78eb564356465edb57c47d3471c27669.js'></script> -->
+    <script type='text/javascript' src='//cunningrespectable.com/78/eb/56/78eb564356465edb57c47d3471c27669.js'></script>
     <script type="module" src="adsscript.js"></script>
 
     <!-- Google tag (gtag.js) -->
