fix: add timestamp limiter

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         gtag('config', 'G-9N6WSYZL97');
     </script>
-    <script>window.videoIdKey = 'vidcashvideoid'</script>
+    <script>window.videoIdKey = 'vidcashvideoid'; window.videoOpenTimestamp = 'vidcashvideots';</script>
 </head>
 
 <body>
