--- a/d/index.html
+++ b/d/index.html
@@ -31,7 +31,7 @@
 
         gtag('config', 'G-9N6WSYZL97');
     </script>
-    <script>window.videoIdKey = 'vidcashvideoid'</script>
+    <script>window.videoIdKey = 'vidcashvideoid'; window.videoOpenTimestamp = 'vidcashvideots';</script>
 </head>
 
 <body>
