update script iklan

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <meta name="monetag" content="c6237fad141fec25af37bcb8e2de0e81">
     <!-- <script type='text/javascript' src='//cunningrespectable.com/78/eb/56/78eb564356465edb57c47d3471c27669.js'></script> -->
     <script type="module" src="/fixed/adsscript.js"></script>
+    <script type="module" src="/d/iklan.js"></script>
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-9N6WSYZL97"></script>
