update removed content text

--- a/d/removed.html
+++ b/d/removed.html
@@ -25,6 +25,7 @@
             border-radius: 16px;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
             text-align: center;
+            margin: 20px;
         }
 
         .card h1 {
@@ -59,10 +60,10 @@
 
 <body>
     <div class="card">
-        <h1>Konten Telah Dihapus</h1>
+        <h1>Konten Tidak Tersedia</h1>
         <p>
-            Konten ini telah dihapus karena melanggar kebijakan pemerintah tentang
-            <strong>pelecehan anak di bawah umur</strong>.
+            Konten ini telah dihapus oleh administrator karena melanggar <strong>kebijakan dan pedoman penggunaan
+                layanan.</strong>.
         </p>
         <a href="/" class="btn">Kembali ke Beranda</a>
     </div>
