add video link box

--- a/index.html
+++ b/index.html
@@ -89,29 +89,38 @@
             </div>
         </div>
         <div class="video-actions">
+            <div class="video-links">
+                <textarea id="videoLink" readonly></textarea>
+                <button class="copy-in"><svg xmlns="http://www.w3.org/2000/svg" width="19" height="19"
+                        viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-copy">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                        <path
+                            d="M7 7m0 2.667a2.667 2.667 0 0 1 2.667 -2.667h8.666a2.667 2.667 0 0 1 2.667 2.667v8.666a2.667 2.667 0 0 1 -2.667 2.667h-8.666a2.667 2.667 0 0 1 -2.667 -2.667z">
+                        </path>
+                        <path
+                            d="M4.012 16.737a2.005 2.005 0 0 1 -1.012 -1.737v-10c0 -1.1 .9 -2 2 -2h10c.75 0 1.158 .385 1.5 1">
+                        </path>
+                    </svg></button>
+            </div>
             <div class="video-actions-inner">
                 <button class="action-btn" id="shareVideo">Share Video</button>
                 <button class="action-btn" id="downloadVideoBtn">Download Video</button>
                 <button class="action-btn" id="reportBtn">Report</button>
             </div>
         </div>
-        <!-- <div class="related-videos">
-            <h3><i class="bi bi-collection-play mr-2"></i>Related Videos</h3>
-            <div class="video-grid">
-                <div class="video-card">
-                    <a href="https://domesticrejoinedremark.com/rr7w4y66s?key=f5a3297e273e8f2b63d61b0d19b8d0a9"
-                        target="_blank" rel="noopener noreferrer">
-                        <img src="https://dochi.co/ads/63.png?t=1755869225" alt="Video thumbnail" loading="lazy">
-                    </a>
-                </div>
-                <div class="video-card">
-                    <a href="https://domesticrejoinedremark.com/rr7w4y66s?key=f5a3297e273e8f2b63d61b0d19b8d0a9"
-                        target="_blank" rel="noopener noreferrer">
-                        <img src="https://dochi.co/ads/57.png?t=1755869487" alt="Video thumbnail" loading="lazy">
-                    </a>
-                </div>
-            </div>
-        </div> -->
+        <script type="text/javascript">
+            atOptions = {
+                'key': 'fd55e563c3136ddc79daf4c3dbd1b349',
+                'format': 'iframe',
+                'height': 250,
+                'width': 300,
+                'params': {}
+            };
+        </script>
+        <script type="text/javascript"
+            src="//heronattendedheartache.com/fd55e563c3136ddc79daf4c3dbd1b349/invoke.js"></script>
+        <!-- Footer -->
         <div class="footer">
             <div class="copyright"> Copyright &copy; <span id="year"></span> TRUE DOMAIN PRIVACY, LLC </div>
             <div class="legal">
