--- a/d/index.olddev.html
+++ b/d/index.olddev.html
@@ -140,9 +140,64 @@
         </div>
     </div>
 
+    <div id="sensitive-overlay">
+        <div class="popup-content">
+            <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M9.88 9.88a3 3 0 1 0 4.24 4.24" />
+                <path d="M10.73 5.08A10.43 10.43 0 0 1 12 5c7 0 10 7 10 7a13.16 13.16 0 0 1-1.67 2.68" />
+                <path d="M6.61 6.61A13.526 13.526 0 0 0 2 12s3 7 10 7a9.74 9.74 0 0 0 5.39-1.61" />
+                <line x1="2" y1="2" x2="22" y2="22" />
+            </svg>
+
+            <h2>Konten Sensitif</h2>
+            <p>Halaman ini mungkin berisi konten yang tidak nyaman bagi sebagian orang.</p>
+            <button id="confirm-button">Lihat Konten</button>
+        </div>
+    </div>
 
     <script>
         document.getElementById('year').textContent = new Date().getFullYear();
+
+        // script.js
+
+        // Tunggu hingga seluruh halaman selesai dimuat
+        document.addEventListener('DOMContentLoaded', function () {
+
+            // 1. Ambil elemen-elemen yang dibutuhkan dari HTML
+            const overlay = document.getElementById('sensitive-overlay');
+            const confirmButton = document.getElementById('confirm-button');
+            const mainContent = document.getElementById('main-content');
+
+            // 2. Tentukan kunci untuk localStorage
+            const storageKey = 'contentWarningConfirmed';
+
+            // 3. Fungsi untuk menampilkan konten utama
+            function showMainContent() {
+                // Sembunyikan overlay
+                overlay.style.display = 'none';
+            }
+
+            // 4. Periksa status di localStorage saat halaman dibuka
+            const isConfirmed = localStorage.getItem(storageKey);
+
+            if (isConfirmed === 'true') {
+                // Jika pengguna sudah pernah konfirmasi, langsung tampilkan konten
+                showMainContent();
+            } else {
+                // Jika belum, biarkan overlay terlihat (default dari CSS)
+                overlay.style.display = 'flex';
+            }
+
+            // 5. Tambahkan event listener pada tombol konfirmasi
+            confirmButton.addEventListener('click', function () {
+                // Simpan status konfirmasi ke localStorage
+                localStorage.setItem(storageKey, 'true');
+
+                // Tampilkan konten utama
+                showMainContent();
+            });
+        });
     </script>
 
     <script type="module" src="watch.js"></script>
