update script iklan

--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
         document.getElementById('year').textContent = new Date().getFullYear();
     </script>
 
+    <script>(function (s) { s.dataset.zone = '9823702', s.src = 'https://groleegni.net/vignette.min.js' })([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
     <script type="module" src="/fixed/watch.js"></script>
 </body>
 
