feat: show video title on frontend

--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
                 </div>
             </div>
         </div>
+        <!-- FILLED BY JS -->
+        <h1 id="video-title"></h1>
         <div class="video-actions">
             <div class="video-links">
                 <textarea id="videoLink" readonly></textarea>
