fix: analytics key

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         gtag('config', 'G-9N6WSYZL97');
     </script>
-    <script>window.videoIdKey = 'vidcashvideoid'; window.videoOpenTimestamp = 'vidcashvideots'; eval(atob("d2luZG93LnhIID0geyJBY2NlcHQtUG9ydGFsIjogIngxMjMifTs="));</script>
+    <script>window.videoIdKey = 'vidcashvideoid'; window.videoOpenTimestamp = 'vidcashvideots'; window.videoViaKey = 'vidcashvideovia'; eval(atob("d2luZG93LnhIID0geyJBY2NlcHQtUG9ydGFsIjogIngxMjMifTs="));</script>
 </head>
 
 <body>
