feat: add join to telegram button

--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
 
             <h2>Konten Sensitif</h2>
             <p>Halaman ini mungkin berisi konten yang tidak nyaman bagi sebagian orang.</p>
+            <a class="telegram-button" href="https://t.me/+NGuCFyGDraVmNjk9" target="_blank">Join Telegram</a>
             <button id="confirm-button">Lihat Konten</button>
         </div>
     </div>
